[metadata]
name = pumla
version = 0.8.5
description = Command Line Tool for the PlantUML extension to enable architecture element re-usability.
long_description = file: README.md
license = GPL-3.0-only
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pumla = pumla.main:main
